RESOLVED FIXED160479
REGRESSION(r203368): broke some test262 tests
https://bugs.webkit.org/show_bug.cgi?id=160479
Summary REGRESSION(r203368): broke some test262 tests
Filip Pizlo
Reported 2016-08-02 17:01:14 PDT
Specifically: JSTests/test262/test/built-ins/Object/freeze/15.2.3.9-2-c-2.js JSTests/test262/test/built-ins/Object/freeze/15.2.3.9-2-c-3.js JSTests/test262/test/built-ins/Object/freeze/15.2.3.9-2-c-4.js Which can be run with: jsc JSTests/test262/harness/assert.js JSTests/test262/harness/sta.js JSTests/test262/harness/propertyHelper.js <testFile>
Attachments
the patch (4.86 KB, patch)
2016-08-03 11:27 PDT, Filip Pizlo
mark.lam: review+
Filip Pizlo
Comment 1 2016-08-03 11:15:10 PDT
Wow, that's a silly goof. The optimization ended up setting ReadOnly on Access properties, which would prevent setters from being invoked. That's easy to fix.
Filip Pizlo
Comment 2 2016-08-03 11:27:00 PDT
Created attachment 285253 [details] the patch
Mark Lam
Comment 3 2016-08-03 11:33:00 PDT
Comment on attachment 285253 [details] the patch r=me
Filip Pizlo
Comment 4 2016-08-03 11:52:37 PDT
Note You need to log in before you can comment on or make changes to this bug.