REGRESSION(r203368): broke some test262 tests https://bugs.webkit.org/show_bug.cgi?id=160479

Reviewed by Mark Lam.

JSTests:

Added a stress test for this case, since we don't always run test262.

* stress/freeze-setter.js: Added.
(let.o.set foo):

Source/JavaScriptCore:

The optimization in r203368 overlooked a subtle detail: freezing should not set ReadOnly on
Accessor properties.

* runtime/Structure.cpp:
(JSC::Structure::nonPropertyTransition):
* runtime/StructureTransitionTable.h:
(JSC::setsDontDeleteOnAllProperties):
(JSC::setsReadOnlyOnNonAccessorProperties):
(JSC::setsReadOnlyOnAllProperties): Deleted.



Canonical link: https://commits.webkit.org/178646@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204093 268f45cc-cd09-0410-ab3c-d52691b4dbfc